force-app/main/default/objects/AWS_File__c/fields/CalculatedFileSize__c.field-meta.xml
<CustomField>
    <fullName>CalculatedFileSize__c</fullName>
    <formula>IF (Size__c &gt;= 1000000000, TEXT(ROUND(Size__c/1000000000, 1)) &amp; &quot; GB&quot;, 
IF (Size__c &gt;= 1000000, TEXT(ROUND(Size__c/1000000,1)) &amp; &quot; MB&quot;, TEXT(ROUND(Size__c/1000,1)) &amp; &quot; KB&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Size</label>
    <type>Text</type>
</CustomField>