force-app/main/default/objects/AWS_File__c/fields/File_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>File_Timestamp__c</fullName>
    <label>File Timestamp</label>
    <type>DateTime</type>
</CustomField>