force-app/main/default/objects/AWS_File__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <label>Requester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>