force-app/main/default/objects/AWS_File__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>