force-app/main/default/objects/AWS_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Related_Object_ID__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requester__c</columns>
    <columns>CalculatedFileSize__c</columns>
    <columns>Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>