force-app/main/default/objects/AWS_File__c/listViews/My_Files.listView-meta.xml
<ListView>
    <fullName>My_Files</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Size__c</columns>
    <columns>CalculatedFileSize__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Files</label>
</ListView>